--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,9 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
-<?= 'Hello world'; ?>
+<% provide(:title, 'Home')	%>
+	
+		
+
+	
+	<h1>Sample App</h1>
+	<p>Find me in app/views/static_pages/home.html.erb</p>
+
+
